# RagnaBot

./: README.md  requirements_build.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
base de conocimiento/: acciones.yaml  habilidades.yaml  roles.yaml
configuracion/: global.yaml  personajes.yaml
docs/: conf.py  index.rst  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
imagenes/test/labels/: 0-4721109559656166_jpeg.rf.9c9c790de9de928de12714dca179678e.txt  0-5062413215637207_jpeg.rf.5817857b7770c417ba6520b566807b55.txt  0-5156598687171936_jpeg.rf.b6cebd5deb5bd9852c6191e0591d4383.txt  0-5160794258117676_jpeg.rf.3f353d1406c6e04fcd97d9bbfd76aed9.txt  0-5186099410057068_jpeg.rf.5f96f35c0f22a5090fc762d3fa38050e.txt  0-5233128666877747_jpeg.rf.0f2a37592632378ff00e23db95a9f20c.txt  0-6135662198066711_jpeg.rf.a46ed4d029a41f6f0b3a9de5f2dd503e.txt  0-6578658223152161_jpeg.rf.d72438c8e1a390d095e6f11fdbb40802.txt  0-6806210279464722_jpeg.rf.f413214bcd2e3f1ce56dc126991c16d9.txt  0-8906012494398393_jpeg.rf.8d200020e7cdbc8a00c81b0dee847f5f.txt
models/: common.py
src/: acciones.py  agente.py  cliente.py  coordinador.py  main.py  test.file
tests/: test_plantilla.py
